add new methods, controllers for lobby
